# srsinst.dc205

./: LICENSE.txt  README.md  pyproject.toml
srsinst/dc205/: __init__.py  __main__.py  dc205.taskconfig
srsinst/dc205/instruments/: __init__.py  components.py  dc205.py  get_instruments.py  keys.py
srsinst/dc205/tasks/: setoutput.py
